Resume Table alignment has fixed

--- a/css/style.css
+++ b/css/style.css
@@ -263,8 +263,8 @@ table {
 th, td {
     text-align: left;
     padding-left: 10px;
-    padding-right:10px;
-    
+    padding-right: 10px;
+    vertical-align:top;
 }
 
 th ul, td ul{
@@ -283,6 +283,15 @@ th ul, td ul{
     width:65%;
     margin-left:10%;
     float:left;
+}
+
+#ResumeMain a {
+    text-decoration: none;
+    color: black;
+}
+
+#ResumeMain a:hover {
+    text-decoration: underline;
 }
 
 #resumeHr {
